--- a/SITE_IPHONE/index.html
+++ b/SITE_IPHONE/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="plugins/bxslider.css" />
     <script src="plugins/script.js"></script>
   </head>
-  <body>
+  <body id="pag-index">
     <header id="cabecalho">
       <div class="container">
         <img src="images/logo_apple_branco.png" alt="Logo Apple" id="logo" />
